--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
-  "name": "chess-club",
-  "packageManager": "yarn@3.0.2"
+  "name": "chessy",
+  "private": true,
+  "packageManager": "yarn@3.0.2",
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "husky": "^7.0.2",
+    "jest": "^27.2.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
+  }
 }
