--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
+    "lerna": "^4.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
