--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,4 +1,13 @@
 {
   "name": "@chessy/web",
-  "packageManager": "yarn@3.0.2"
+  "private": true,
+  "packageManager": "yarn@3.0.2",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": ["build"],
+  "scripts": {
+    "build": "tsc -b --declaration",
+    "clean": "rm -rf ./build && rm tsconfig.tsbuildinfo",
+    "dev": "tsc -b -w --preserveWatchOutput"
+  }
 }
