--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "lerna": "^4.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
+  }, 
+  "scripts": {
+    "build": "lerna run build --stream",
+    "clean": "lerna run clean --parallel"
   }
 }
