--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "packageManager": "yarn@3.0.2",
   "devDependencies": {
+    "@types/node": "^16.9.2",
     "esbuild": "^0.12.28"
   },
   "main": "build/index.js",
   "types": "build/index.d.ts",
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "scripts": {
     "build": "tsc -b --declaration",
     "clean": "rm -rf ./build && rm tsconfig.tsbuildinfo",
