--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
-    "lerna": "^4.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
