--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "babel-jest": "^27.2.1",
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "jest": "^27.2.0",
@@ -16,7 +21,9 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "build": "lerna run build --stream",
-    "clean": "lerna run clean --parallel"
+    "g:tsc": "cd $INIT_CWD && tsc",
+    "g:ex": "cd $INIT_CWD && ts-node",
+    "g:repl": "ts-node",
+    "g:test": "jest"
   }
 }
