--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,8 +8,12 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b --declaration",
+    "build": "yarn g:tsc -b",
     "clean": "rm -rf ./build && rm tsconfig.tsbuildinfo",
-    "dev": "tsc -b -w --preserveWatchOutput"
+    "dev": "yarn g:tsc -b -w --preserveWatchOutput",
+    "test": "yarn g:test --selectProjects @chessy/web"
+  },
+  "dependencies": {
+    "@chessy/server": "workspace:packages/server"
   }
 }
