--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "@chessy/web",
-  "private": true,
-  "packageManager": "yarn@3.0.2",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
-  "files": [
-    "build"
-  ],
+  "name": "@chessy/weby",
+  "version": "0.0.0",
   "scripts": {
-    "build": "yarn g:tsc -b",
-    "clean": "rm -rf ./build && rm tsconfig.tsbuildinfo",
-    "dev": "yarn g:tsc -b -w --preserveWatchOutput",
-    "test": "yarn g:test --selectProjects @chessy/web"
+    "dev": "vite",
+    "check": "tsc",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-react": "^1.0.0",
+    "typescript": "^4.3.2",
+    "vite": "^2.6.4"
   }
 }
