--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-jest": "^27.2.1",
+    "babel-plugin-transform-import-meta": "^2.1.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.0",
     "ts-node": "^10.2.1",
