--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,9 +12,13 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
