add basic server

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.2",
+    "@types/uuid": "^8.3.1",
     "esbuild": "^0.12.28"
   },
   "main": "build/index.js",
@@ -16,6 +17,11 @@
     "build": "yarn g:tsc",
     "clean": "rm -rf ./build && rm tsconfig.tsbuildinfo",
     "dev": "yarn g:tsc -b -w --preserveWatchOutput",
-    "test": "yarn g:test --selectProjects @chessy/server"
+    "test": "yarn g:test --selectProjects @chessy/server",
+    "serve": "yarn node build/server.js"
+  },
+  "dependencies": {
+    "fastify": "^3.22.0",
+    "uuid": "^8.3.2"
   }
 }
