probably should check in all these changes...

--- a/packages/core/tsconfig-cjs.json
+++ b/packages/core/tsconfig-cjs.json
@@ -2,9 +2,6 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build"
-  },
-  "references": [
-    { "path": "../core" }
-  ]
+    "outDir": "build/cjs"
+  }
 }
