--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "ESNext",
     "rootDir": "src",
-    "outDir": "build"
-  },
-  "references": [
-    { "path": "../core" }
-  ]
+    "outDir": "build/mjs"
+  }
 }
