--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chessy/weby",
+  "name": "@chessy/web",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chessy/core": "workspace:packages/core",
     "react": "^17.0.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
