--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@chessy/weby",
+  "name": "@chessy/web",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,10 +8,22 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@chessy/core": "workspace:packages/core",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.3",
+    "axios": "^0.24.0",
+    "history": "5",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
+    "react-dom": "^17.0.0",
+    "react-router-dom": "6",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
