--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,8 +12,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react"
   },
   "include": ["./src"],
-  "references": []
+  "references": [
+    { "path": "../core" }
+  ]
 }
