--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ reports/
 # Swap the comments on the following lines if you don't wish to use zero-installs
 # Documentation here: https://yarnpkg.com/features/zero-installs
 .pnp.*
+
+# generated / collected puzzle files
+blunders
+puzzles
