--- a/packages/puzzle-fetcher/package.json
+++ b/packages/puzzle-fetcher/package.json
@@ -3,7 +3,7 @@
   "description": "fetch chess puzzles in bulk from major sources",
   "private": true,
   "packageManager": "yarn@3.0.2",
-  "main": "build/fetcher.js",
+  "main": "build/fetching.js",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf ./build && rm -f tsconfig.tsbuildinfo",
@@ -18,6 +18,7 @@
     "chalk": "4",
     "js-yaml": "^4.1.0",
     "mkdirp": "^1.0.4",
+    "p-map": "4",
     "yargs": "^17.3.0"
   },
   "devDependencies": {
