--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,6 +6,7 @@
     "allowSyntheticDefaultImports": true
   },
   "references": [
-    { "path": "../core" }
+    { "path": "../core" },
+    { "path": "../puzzle-fetcher" }
   ]
 }
