--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,6 +26,10 @@
     "fastify": "^3.22.0",
     "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
+    "graphiql": "^1.5.16",
+    "graphql": "^16.2.0",
+    "mercurius": "^9.1.0",
+    "mercurius-codegen": "^3.3.0",
     "mongoose": "^6.1.5",
     "uuid": "^8.3.2"
   }
