--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.2",
+    "@types/url-join": "^4.0.1",
     "@types/uuid": "^8.3.1",
     "tsc-watch": "^4.5.0"
   },
@@ -22,6 +23,7 @@
   "dependencies": {
     "@chessy/core": "workspace:packages/core",
     "@chessy/puzzle-fetcher": "workspace:packages/puzzle-fetcher",
+    "axios": "^0.25.0",
     "dotenv": "^10.0.0",
     "fastify": "^3.22.0",
     "fastify-cors": "^6.0.2",
@@ -31,6 +33,8 @@
     "mercurius": "^9.1.0",
     "mercurius-codegen": "^3.3.0",
     "mongoose": "^6.1.5",
+    "p-map": "4",
+    "url-join": "^4.0.1",
     "uuid": "^8.3.2"
   }
 }
