--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
     "@types/uuid": "^8.3.1",
     "graphql-request": "^3.7.0",
     "mongodb-memory-server": "^8.2.0",
+    "pino-pretty": "^7.5.1",
     "tsc-watch": "^4.5.0"
   },
   "main": "build/server.js",
