--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "history": "5",
     "react": "^17.0.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.0",
     "react-router-dom": "6",
-    "swr": "^1.0.1"
+    "swr": "^1.1.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
