IDs for all core models

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,8 @@
   "packageManager": "yarn@3.0.2",
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.2"
+    "@types/node": "^16.9.2",
+    "@types/uuid": "^8.3.4"
   },
   "main": "build/cjs/index.js",
   "module": "build/mjs/index.js",
@@ -25,6 +26,7 @@
     "test": "yarn g:test --selectProjects @chessy/core"
   },
   "dependencies": {
-    "pino": "^7.6.5"
+    "pino": "^7.6.5",
+    "uuid": "^8.3.2"
   }
 }
