--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "check": "tsc",
+    "test": "yarn g:test --selectProjects @chessy/web",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
+    "@emotion/jest": "^11.7.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
