--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -86,6 +86,9 @@ jobs:
     runs-on: ubuntu-latest
     if: success() && github.ref == 'refs/heads/main'
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
       - name: Copy Docker Compose file to DigitalOcean Droplet
         uses: appleboy/scp-action@master
         with:
@@ -94,7 +97,7 @@ jobs:
           key: ${{ secrets.DO_DROPLET_SSH_KEY }}
           port: 22
           source: "docker-compose.yml"
-          target: "${{ env.DO_HOME_DIR }}/docker-compose.yml"
+          target: "/root/docker-compose.yml"
 
       - name: Deploy web server to DigitalOcean Droplet
         uses: appleboy/ssh-action@v0.1.4
