--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
       timeout: 10s
       retries: 3
     restart: unless-stopped
+    secrets:
+      - mongodb_root_username
+      - mongodb_root_password
   mongo-express:
     image: mongo-express
     container_name: mongo-express
@@ -41,12 +44,15 @@ services:
       timeout: 10s
       retries: 3
     restart: unless-stopped
+    secrets:
+      - mongodb_root_username
+      - mongodb_root_password
+      - mongodb_inspector_username
+      - mongodb_inspector_password
   backend:
     image: ghcr.io/piqueme/chessy-api:main
     container_name: backend
     environment:
-      - DB_USERNAME=root
-      - DB_PASSWORD=pass12345
       - DB_URI=mongodb://mongodb:27017
     volumes:
       - /root/.env:/app/.env
@@ -54,6 +60,10 @@ services:
       - mongodb_network
     ports:
       - 8080:8080
+    secrets:
+      - droplet_host
+      - mongodb_root_username
+      - mongodb_root_password
   frontend:
     image: ghcr.io/piqueme/chessy-web:main
     container_name: frontend
