--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
 # LOCAL
-SERVER_IP=http://127.0.0.1
-SERVER_PORT=8080
-CLIENT_IP=http://127.0.0.1
-CLIENT_PORT=3000
-DB_USERNAME=root
-DB_PASSWORD=pass12345
-DB_URI=mongodb://localhost:27017
+# VITE_API_HOST=http://127.0.0.1:8080
+# SERVER_IP=http://127.0.0.1
+# SERVER_PORT=8080
+# CLIENT_IP=http://127.0.0.1
+# CLIENT_PORT=3000
+# DB_USERNAME=root
+# DB_PASSWORD=pass12345
+# DB_URI=mongodb://localhost:27017
 
 # INTEGRATION
+# VITE_API_HOST=http://127.0.0.1:8080
 # SERVER_IP=0.0.0.0
 # SERVER_PORT=8080
 # CLIENT_IP=http://127.0.0.1
@@ -17,6 +19,7 @@ DB_URI=mongodb://localhost:27017
 # DB_URI=mongodb://localhost:27017
 
 # PRODUCTION
-# SERVER_IP=0.0.0.0
-# SERVER_PORT=8080
-# DB_URI=mongodb://localhost:27017
+VITE_API_HOST=http://146.190.0.135
+SERVER_IP=0.0.0.0
+SERVER_PORT=8080
+DB_URI=mongodb://localhost:27017
