--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # VITE_API_HOST=http://127.0.0.1:8080
 # SERVER_IP=http://127.0.0.1
 # SERVER_PORT=8080
-# CLIENT_IP=http://127.0.0.1
+# CLIENT_IP=127.0.0.1
 # CLIENT_PORT=3000
 # DB_USERNAME=root
 # DB_PASSWORD=pass12345
@@ -12,7 +12,7 @@
 # VITE_API_HOST=http://127.0.0.1:8080
 # SERVER_IP=0.0.0.0
 # SERVER_PORT=8080
-# CLIENT_IP=http://127.0.0.1
+# CLIENT_IP=127.0.0.1
 # CLIENT_PORT=
 # DB_USERNAME=root
 # DB_PASSWORD=pass12345
