enable domain for application

--- a/packages/web/nginx.conf
+++ b/packages/web/nginx.conf
@@ -10,10 +10,14 @@ http {
 
     root /var/www;
     index index.html index.htm;
-    server_name puzlr.com www.puzlr.com;
+    server_name piqued.blog www.piqued.blog;
 
     location / {
       try_files $uri $uri/ $uri.html /index.html;
+    }
+
+    location /api/ {
+      proxy_pass http://backend:8080;
     }
   }
 }
