--- a/.env
+++ b/.env
@@ -19,7 +19,8 @@
 # DB_URI=mongodb://localhost:27017
 
 # PRODUCTION
-VITE_API_HOST=http://146.190.0.135:8080
+VITE_API_HOST=http://piqued.blog/api
+CLIENT_IP=piqued.blog
 SERVER_IP=0.0.0.0
 SERVER_PORT=8080
 DB_URI=mongodb://localhost:27017
