--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "g:repl": "ts-node",
     "g:test": "jest",
     "g:lint": "eslint ./packages --ext .ts,.tsx",
-    "g:viewCoverage": "xdg-open reports/lcov-report/index.html"
+    "g:viewCoverage": "xdg-open reports/lcov-report/index.html",
+    "package:local:be": "sudo docker build . -t piqueme/chessy-be -f ./packages/server/Dockerfile",
+    "package:local:fe": "sudo docker build . -t piqueme/chessy-fe -f ./packages/web/Dockerfile",
+    "package:local": "yarn package:be && yarn package:fe",
+    "deploy:local": "sudo docker-compose -f docker-compose-local.yml up",
+    "deploy:clean": "sudo docker-compose down"
   }
 }
