--- a/packages/web/nginx.conf
+++ b/packages/web/nginx.conf
@@ -12,12 +12,12 @@ http {
     index index.html index.htm;
     server_name piqued.blog www.piqued.blog;
 
-    location / {
-      try_files $uri $uri/ $uri.html /index.html;
+    location /api/ {
+      proxy_pass http://backend:8080/;
     }
 
-    location /api/ {
-      proxy_pass http://backend:8080;
+    location / {
+      try_files $uri $uri/ $uri.html /index.html;
     }
   }
 }
