--- a/.env
+++ b/.env
@@ -9,13 +9,11 @@
 # DB_URI=mongodb://localhost:27017
 
 # INTEGRATION
-# VITE_API_HOST=http://127.0.0.1:8080
+# VITE_API_HOST=http://127.0.0.1/api
 # SERVER_IP=0.0.0.0
 # SERVER_PORT=8080
 # CLIENT_IP=127.0.0.1
 # CLIENT_PORT=
-# DB_USERNAME=root
-# DB_PASSWORD=pass12345
 # DB_URI=mongodb://localhost:27017
 
 # PRODUCTION
