add support for certbot certificate retrieval

--- a/packages/web/nginx.conf
+++ b/packages/web/nginx.conf
@@ -12,6 +12,11 @@ http {
     index index.html index.htm;
     server_name piqued.blog www.piqued.blog;
 
+    location ~ /.well-known/acme-challenge {
+      allow all;
+      root /var/www/certbot;
+    }
+
     location /api/ {
       proxy_pass http://backend:8080/;
     }
