add SSL support to NGINX

--- a/packages/web/nginx.conf
+++ b/packages/web/nginx.conf
@@ -5,12 +5,16 @@ http {
   server {
     include mime.types;
 
-    listen 80;
-    listen [::]:80;
+    listen 443 default_server;
+    listen [::]:443 default_server;
 
     root /var/www;
     index index.html index.htm;
     server_name piqued.blog www.piqued.blog;
+
+    ssl on;
+    ssl_certificate /etc/letsencrypt/live/piqued.blog/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/piqued.blog/privkey.pem;
 
     location ~ /.well-known/acme-challenge {
       allow all;
@@ -24,5 +28,11 @@ http {
     location / {
       try_files $uri $uri/ $uri.html /index.html;
     }
+  }
+
+  server {
+    listen 0.0.0.0:80;
+    server_name piqued.blog www.piqued.blog;
+    rewrite ^ https://$host$request_uri? permanent;
   }
 }
