--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
 # DB_URI=mongodb://localhost:27017
 
 # PRODUCTION
-VITE_API_HOST=http://piqued.blog/api
+VITE_API_HOST=https://piqued.blog/api
 CLIENT_IP=piqued.blog
 SERVER_IP=0.0.0.0
 SERVER_PORT=8080
