--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -45,7 +45,7 @@ services:
       - mongodb_inspector_username
       - mongodb_inspector_password
   backend:
-    image: piqueme/chessy-be
+    image: piqueme/puzlr-be
     container_name: backend
     environment:
       - DB_URI=mongodb://mongodb:27017
@@ -61,7 +61,7 @@ services:
       - mongodb_root_username
       - mongodb_root_password
   frontend:
-    image: piqueme/chessy-fe
+    image: piqueme/puzlr-fe
     container_name: frontend
     networks:
       - server_network
