--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - mongodb_inspector_username
       - mongodb_inspector_password
   backend:
-    image: ghcr.io/piqueme/chessy-api:main
+    image: ghcr.io/piqueme/puzlr-api:main
     container_name: backend
     environment:
       - DB_URI=mongodb://mongodb:27017
@@ -61,7 +61,7 @@ services:
       - mongodb_root_username
       - mongodb_root_password
   frontend:
-    image: ghcr.io/piqueme/chessy-web:main
+    image: ghcr.io/piqueme/puzlr-web:main
     container_name: frontend
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
