fixup local server config; fixup notation React key duplicates

--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 # LOCAL
 # VITE_API_HOST=http://127.0.0.1:8080
-# SERVER_IP=http://127.0.0.1
+# SERVER_IP=127.0.0.1
 # SERVER_PORT=8080
 # CLIENT_IP=127.0.0.1
 # CLIENT_PORT=3000
-# DB_USERNAME=root
-# DB_PASSWORD=pass12345
 # DB_URI=mongodb://localhost:27017
 
 # INTEGRATION
